# patti_csv

./: Cargo.toml  README.md  readme.md
.cargo/: config.toml
benches/: benchmark.rs
resources/: JSONCONF.md  jsonconf_example.json
src/: errors.rs  iterating_parser.rs  iterating_parser2.rs  lib.rs  line_tokenizer.rs  line_tokenizer2.rs  parser_common.rs  parser_config.rs  skip_take_lines.rs  transform_sanitize_token.rs
src/conf/: from_jsonconf.rs  jsonconf.rs  mod.rs
src/data/: cell.rs  column.rs  csv_cell.rs  csv_column.rs  csv_data.rs  csv_data_columns.rs  csv_row.rs  csv_value.rs  data.rs  mod.rs  row.rs  value.rs
src/parse/: config.rs  from_json_config.rs  iter_parser.rs  iterating_parser.rs  line_tokenizer.rs  line_tokenizer_OLD.rs  mem_parser.rs  mod.rs  parser_common.rs  parser_config.rs  skip_take_file_lines.rs  skip_take_lines.rs  transform_sanitize_token.rs
src/transform_enrich/: split.rs
