[package]
name = "patti_csv"
version = "0.1.0"
authors = ["Joerg Sischka <sischcode@gmx.net>"]
edition = "2021"
rust-version = "1.61"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
venum = { path = "../venum", version = "0.1.0" }
log = "0.4"
regex = "1.5"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
rust_decimal = "1.22"
rust_decimal_macros = "1.22"
strum = "0.24"
strum_macros = "0.24"

[dependencies.log4rs]
version = "1.0"
features = ["json_encoder"]