[package]
name = "patti_csv"
version = "0.2.0"
authors = ["Jörg Sischka <sischcode@gmx.net>"]
readme = "README.md"
keywords = ["rust", "venum", "csv", "parsing", "transformation", "enrichment", "manipulation"]
license = "Apache-2.0"
# license-file = "LICENSE"
edition = "2021"
# rust-version = "1.62"
include = ["/src", "README.md", "LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
venum = { path = "../venum", version = "0.1.1" }
venum_tds = { path = "../venum_tds", version = "0.1.1" }
regex = "1.5"
thiserror = "1.0"
strum_macros = "0.24"
compact_str = "0.6"

# These two are behind the (implicit) features: "dep:serde" and "dep:serde_json".
serde = { version = "1.0", features = ["derive"], optional = true}
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.4.0"

[features]
default = ["jsonconf"]

# We have all our json conf stuff (i.e. configuration via json) in a feature "jsonconf"
# This in turn needs serde and serde_json, as well as the serde feature in venum
jsonconf = ["dep:serde", "dep:serde_json", "venum/serde"]

[[bench]]
name = "benchmark"
harness = false